[package]
name = "mirl_windowing_minifb"
version = "0.0.0-alpha"
edition = "2024"
repository.workspace = true
license.workspace = true
authors.workspace = true

[features]
all = []
_checking = []
c_compatible = []

cursor_show_hotspot = []

[dependencies]
mirl_windowing_core = { version = "0.0.0-alpha" }
mirl_system = { version = "0.0.0-alpha" }
mirl_buffer = { version = "0.0.0-alpha" }
mirl_core = { version = "0.0.0-alpha" }
mirl_extensions = { version = "0.0.0-alpha" }
mirl_input = { version = "0.0.0-alpha" }

raw-window-handle = { version = ">=0.6.2", default-features = false }

# MiniFB
minifb = { "version" = ">=0.28.0" }

[lints]
workspace = true

[build-dependencies]
mirl_build_tools = { workspace = true }
